--- a/libraries/MemorizingTrustManager/build.gradle
+++ b/libraries/MemorizingTrustManager/build.gradle
@@ -6,8 +6,8 @@ repositories {
 }
 
 android {
-    compileSdk 32
-    buildToolsVersion project.BUILD_TOOLS_VERSION
+    compileSdk 33
+    buildToolsVersion '33.0.0'
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion Integer.parseInt(project.COMPILE_SDK_VERSION)
@@ -30,5 +30,9 @@ android {
     }
     lint {
         abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
