--- a/.github/workflows/ovbot.yml
+++ b/.github/workflows/ovbot.yml
@@ -1,2 +1,4 @@
-- name: Build Android App
-  uses: sparkfabrik/android-build-action@v1.2.0
+- uses: sparkfabrik/android-build-action@v1.0.0
+  with:
+    project-path: .
+    output-path: my-app.apk
