--- a/.github/workflows/visiondroid.yml
+++ b/.github/workflows/visiondroid.yml
@@ -1,4 +1,4 @@
-name: ovbot
+name: visiondroid
 
 on:
   push:
@@ -11,4 +11,6 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Build the app
-        run: ./gradlew build
+        run: ./gradlew assembleDebug
+      - name: Publish the app
+        run: ./CI/build.sh
