--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,8 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-XX:MaxPermSize=1536m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError -Xmx2048m
+org.gradle.jvmargs=-XX:+HeapDumpOnOutOfMemoryError -Xmx2048m
 
 BUILD_TOOLS_VERSION 33.0.0
 COMPILE_SDK_VERSION 32
 android.useAndroidX=true
 org.gradle.unsafe.configuration-cache=true
 android.enableJetifier=true
-
-systemProp.http.proxyHost=fodev.org
-systemProp.http.proxyPort=8118
-systemProp.http.nonProxyHosts=*.jitpack.io, *.maven.org
-systemProp.https.proxyHost=fodev.org
-systemProp.https.proxyPort=8118
-systemProp.https.nonProxyHosts=*.jitpack.io, *.maven.org
