--- a/libraries/simple-gauge-android/gaugelibrary/build.gradle
+++ b/libraries/simple-gauge-android/gaugelibrary/build.gradle
@@ -22,6 +22,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.ekndev.gaugelibrary'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
