--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ android {
     buildToolsVersion '33.0.1'
 
     defaultConfig {
-        versionCode 531
-        versionName="12.2.r531"
+        versionCode 535
+        versionName="12.2.r535I got report that none OV image is working on formuler and "
         minSdkVersion 17
         targetSdkVersion 33
         multiDexEnabled true
