--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ repositories {
 }
 
 dependencies {
-    def room_version = "2.5.1"
+    def room_version = '2.5.2'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
@@ -70,8 +70,8 @@ android {
     buildToolsVersion '33.0.1'
 
     defaultConfig {
-        versionCode 545
-        versionName="13.1.r545"
+        versionCode 548
+        versionName="13.1.r548"
         minSdkVersion 17
         targetSdkVersion 33
         multiDexEnabled true
